--- a/homepage.css
+++ b/homepage.css
@@ -78,7 +78,7 @@ nav ul li a{
 .imglogowelcome{
     display: flex;
     justify-content: center;
-    margin-top: 140px;
+    margin-top: 100px;
  
     
 }
@@ -138,7 +138,7 @@ nav ul li a{
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    color: white;
+    color: black;
     font-size: 27px;
     margin-top: 6px;
 }
@@ -208,7 +208,7 @@ nav ul li a{
     float: left;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    color: black;
+    color: white;
     font-size: 20px;
     margin-top: 8px;
 }
@@ -219,11 +219,15 @@ nav ul li a{
     float: left;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    color: black;
+    color: white;
     font-size: 20px;
     margin-top: 8px;
 }
 
-#foot{
-    background-color: rgb(108,108,108);
+.footer{
+    height: 130px;
+    background-color: #6C6C6C;
+    padding: 0;
+    margin: 0;
+    overflow: auto;
 }
