--- a/aboutus.css
+++ b/aboutus.css
@@ -6,7 +6,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: url(img/Saith_Seren_front.jpg);
+    background-color: white;
     background-position: center;
     background-size: cover;
     position: relative;
@@ -63,108 +63,6 @@ nav ul li a{
     text-align: center;
 }
 
-
-.welcome{
-    text-align: center;
-    position: relative;
-    top: 100px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 60px;
-    color: white;
-    letter-spacing: 1px;
-}
-
-.imglogowelcome{
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
- 
-    
-}
-
-.aboutus{
-    height: 200px;
-    background-color: rgb(195,22,22);
-    padding: 0;
-    margin: 0;
-    overflow: auto;
-}
-
-.aboutus_titre{
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: white;
-    font-size: 27px;
-    margin-top: 6px;
-}
-
-.gauche{
-    text-align: center;
-    width: 33%;
-    float: left;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: white;
-    font-size: 20px;
-    margin-top: 8px;
-}
-
-.milieu{
-    text-align: center;
-    width: 33%;
-    float: left;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: white;
-    font-size: 20px;
-    margin-top: 8px;
-}
-
-
-
-.offres{
-    height: 350px;
-    background-color: white;
-    padding: 0;
-    margin: 0;
-    overflow: auto;
-}
-
-.proposals{
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: black;
-    font-size: 27px;
-    margin-top: 6px;
-}
-
-
-.images{
-    float: left;
-    width: 33%;
-    padding-left: 50px;
-    margin-top: 15px;
-}
-
-.row{
-    display: flex;
-}
-
-
-.test{
-    padding-left: 37%;
-    
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: black;
-    font-size: 20px;
-}
-
-
-
 .membership{
     height: 50px;
     background-color: rgb(255,214,0);
@@ -199,7 +97,6 @@ nav ul li a{
     margin-top: 7px;
 }
 
-
 .lefttext{
     text-align: center;
     width: 50%;
@@ -228,4 +125,80 @@ nav ul li a{
     padding: 0;
     margin: 0;
     overflow: auto;
+}
+
+
+.aboutus_titre{
+    text-align: center;
+    position: relative;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: black;
+    font-size: 50px;
+    top: 50px;
+}
+
+.gauche{
+    text-align: center;
+    width: 50%;
+    float: left;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: white;
+    font-size: 20px;
+    margin-top: 80px;
+}
+
+.milieu{
+    text-align: center;
+    width: 50%;
+    float: left;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: white;
+    font-size: 20px;
+    margin-top: 80px;
+}
+
+.maps{
+    text-align: center;
+    margin-top: 40  0px;
+}
+
+.photos{
+    min-height: 100vh;
+    width: 100%;
+    background-color: grey;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.photos_titre{
+    text-align: center;
+    position: relative;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: black;
+    font-size: 27px;
+    top: 10px;
+}
+
+.row{
+    display: flex;
+}
+
+.images{
+    float: left;
+    width: 50%;
+    padding-left: 50px;
+    margin-top: 30px;
+}
+
+.test{
+    padding-left: 37%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: black;
+    font-size: 20px;
 }
