--- a/membership.css
+++ b/membership.css
@@ -4,7 +4,7 @@
 }
 
 .header{
-    min-height: 100vh;
+    height: 120px;
     width: 100%;
     background-color: white;
     background-position: center;
@@ -12,11 +12,6 @@
     position: relative;
 }
 
-.blur{
-    backdrop-filter: blur(4px);
-    height: 100vh;
-	width: 100%;
-}
 
 .bar{
     width: 100%;
@@ -61,14 +56,6 @@ nav ul li a{
     font-weight: 700;
     width: 20%;
     text-align: center;
-}
-
-.membership{
-    height: 50px;
-    background-color: rgb(255,214,0);
-    padding: 0;
-    margin: 0;
-    overflow: auto;
 }
 
 .askmember{
@@ -127,8 +114,7 @@ nav ul li a{
     overflow: auto;
 }
 
-
-.aboutus_titre{
+.member_titre{
     text-align: center;
     position: relative;
     font-family: 'Montserrat', sans-serif;
@@ -138,68 +124,52 @@ nav ul li a{
     top: 50px;
 }
 
-.gauche{
-    text-align: center;
-    width: 50%;
-    float: left;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: black;
-    font-size: 20px;
-    margin-top: 80px;
-}
-
-.milieu{
-    text-align: center;
-    width: 50%;
-    float: left;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: black;
-    font-size: 20px;
-    margin-top: 80px;
-}
-
-.maps{
-    text-align: center;
-    margin-top: 40  0px;
-}
-
-.photos{
-    min-height: 85vh;
+.member_infos{
+    height: 50px;
     width: 100%;
-    background-color: grey;
+    background-color: rgb(255,214,0);
     background-position: center;
     background-size: cover;
     position: relative;
 }
 
-.photos_titre{
+.member_infos_texte{
     text-align: center;
     position: relative;
+    top: 11px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     color: black;
-    font-size: 27px;
-    top: 10px;
+    font-size: 25px;
 }
 
-.row{
+.imglogowelcome{
     display: flex;
+    justify-content: center;
+    margin-top: 0px;
 }
 
-.images{
-    float: left;
-    width: 50%;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-top: 30px;
+.logo_bouton{
+    height:63vh;
+    width: 100%;
+    background-color: white;
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
 
-.test{
-    padding-left: 40%;
+.boutMem2{
+    border-radius: 20px;
+    background-color: rgb(206,173,0);
+    color: #fff;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     color: black;
-    font-size: 20px;
+    font-size: 22px;
+    border: 0;
+    cursor: pointer;
+    padding: 0.2em 1.4em;
+    float: left;
+    margin-top: 7px;
+    margin-left: 47%;
 }
